src/test/ImmutableArray/ImmutableArray.expected
error: ImmutableArray.panda:1:14: immutable array may not have mutable element type 'panda.core.MutableString'
error: ImmutableArray.panda:4:6: cannot modify immutable array
error: ImmutableArray.panda:6:9: 'panda.collections.ImmutableArray<panda.core.Int32>' not define the exclusive slice assignment ([..]:=) operator for these types
error: ImmutableArray.panda:8:3: no match found for method append(panda.core.Int8) in panda.collections.ImmutableArray<panda.core.Int32>
error: ImmutableArray.panda:10:10: cannot assign to 'b.length()'
5 errors
